[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/SIFT_gs/version.py"

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = ["venv"]
